--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "date-fns": "^1.30.1",
     "dom-form-serializer": "^1.0.7",
     "gatsby": "^2.0.97",
+    "gatsby-cli": "^2.7.7",
     "gatsby-image": "^2.0.27",
     "gatsby-plugin-manifest": "^2.0.13",
     "gatsby-plugin-netlify": "^2.0.6",
@@ -43,7 +44,8 @@
     "react-feather": "^1.1.5",
     "react-helmet": "^5.2.0",
     "react-markdown": "^4.0.6",
-    "react-photoswipe": "^1.3.0"
+    "react-photoswipe": "^1.3.0",
+    "redux": "^4.0.1"
   },
   "keywords": [
     "gatsby"
