--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-plugin-sharp": "^2.0.18",
     "gatsby-plugin-sitemap": "^2.0.4",
     "gatsby-remark-images": "^3.0.1",
+    "gatsby-remark-prismjs": "^3.3.1",
     "gatsby-remark-relative-images": "^0.2.1",
     "gatsby-remark-responsive-iframe": "^2.0.8",
     "gatsby-source-filesystem": "^2.0.17",
@@ -38,6 +39,7 @@
     "netlify-cms": "^2.3.3",
     "node-sass": "^4.11.0",
     "postcss-preset-env": "^6.5.0",
+    "prismjs": "^1.16.0",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
