minor update for homepage

--- a/content/settings/global.yml
+++ b/content/settings/global.yml
@@ -1,4 +1,4 @@
-siteTitle: Flamingod News
+siteTitle: アメリカのウェブテクノロジー情報
 siteUrl: 'https://friendly-colden-8caf2a.netlify.com'
 siteDescription: >-
   A starter project for creating lightning-fast websites with Gatsby v2 Netlify
