--- a/content/settings/global.yml
+++ b/content/settings/global.yml
@@ -1,8 +1,6 @@
-siteTitle: アメリカのウェブテクノロジー情報
+siteTitle: Flamingod News
 siteUrl: 'https://friendly-colden-8caf2a.netlify.com'
-siteDescription: >-
-  A starter project for creating lightning-fast websites with Gatsby v2 Netlify
-  CMS v2 and Uploadcare media library.
+siteDescription: アメリカの最新ウェブテクノロジー情報を日本語で紹介するウェブサイト
 socialMediaCard:
-  image: 'https://ucarecdn.com/fcc8d148-a9a8-42ee-a793-0f12b1437f61/'
+  image: 'https://ucarecdn.com/82430110-9aff-4c52-a7c0-393ce3c24c13/'
 googleTrackingId: UA-133175780-1
