--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -137,7 +137,7 @@ collections: # A list of collections the CMS should be able to edit
                   required: false,
                 }
 
-      - file: 'content/pages/componets.md'
+      - file: 'content/pages/components.md'
         label: 'Componets Page'
         name: 'componets-page'
         fields:
